<resources>
    <string name="app_name">Open Camera</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max file size</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="fps">FPS</string>
    <string name="focus_distance">Focus distance</string>
    <string name="infinite">Infinite</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exposure_locked">Exposure locked</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cancelled_repeat_mode">Cancelled repeat mode</string>
    <string name="started_timer">Started timer</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="preference_ui_placement">UI placement</string>
    <string name="preference_immersive_mode">Immersive mode</string>
    <string name="preference_show_zoom_slider_controls">Show zoom slider control</string>
    <string name="preference_show_zoom_slider_controls_summary">Show the slider for zoom control</string>
    <string name="preference_show_toasts">Show on-screen messages</string>
    <string name="preference_show_toasts_summary">Whether to display temporary on-screen info messages</string>
    <string name="preference_keep_display_on">Keep display on</string>
    <string name="preference_keep_display_on_summary">If enabled, the screen won\'t switch off while the main Open Camera UI is active</string>
    <string name="preference_max_brightness">Force maximum brightness</string>
    <string name="preference_max_brightness_summary">Force screen display to be at maximum brightness, rather than device default</string>
    <string name="preference_location">Store location data (Geotagging)</string>
    <string name="preference_location_summary">Store GPS location data in the photos/videos</string>
    <string name="preference_gps_direction">Store compass direction</string>
    <string name="preference_gps_direction_summary">Store GPS compass direction in the photos, for non-RAW (JPEG/etc) images only</string>
    <string name="preference_require_location">Require location data</string>
    <string name="preference_require_location_summary">If location data is enabled, only take photo/video if location data is available</string>
    <string name="preference_reset">Reset settings</string>
    <string name="preference_reset_summary">Reset all Open Camera settings to default</string>
    <string name="preference_show_take_photo">Show \"Take Photo\" icon</string>
    <string name="preference_show_take_photo_summary">Show the icon for taking photos and recording videos. Uncheck if you\'d rather take photos by other methods (e.g., if your device has a hardware shutter button, or using the volume keys).</string>
    <string name="preference_antibanding">Anti-banding</string>
    <string name="preference_antibanding_summary">Algorithms to help with light flickering.\n%s</string>
    <string name="preference_show_whats_new">Shows What\'s New dialog</string>
    <string name="preference_show_whats_new_summary">Whether to display information on new features and improvements when the application has updated</string>
    <string name="preference_edge_mode">Edge mode algorithm</string>
    <string name="preference_edge_mode_summary">Algorithm that the camera driver should use for applying edge enhancement. Edge enhancement improves sharpness and details in the captured image. (This setting is ignored in NR photo mode.)\n%s</string>
    <string name="preference_noise_reduction_mode">Noise reduction algorithm</string>
    <string name="preference_noise_reduction_mode_summary">Algorithm that the camera driver should use for applying noise reduction. The noise reduction algorithm attempts to improve image quality by removing excessive noise added by the capture process, especially in dark conditions. (Note that this is not related to the Noise Reduction photo mode, and in fact this setting is ignored in NR photo mode.)\n%s</string>
    <string name="preference_save_settings">Save settings</string>
    <string name="preference_save_settings_summary">Saves all of Open Camera\'s settings to a file</string>
    <string name="preference_restore_settings">Restore settings</string>
    <string name="preference_restore_settings_summary">Restores previously saved settings. This will overwrite all current settings with the saved settings!</string>
    <string name="preference_show_face_detection">Show face detection icon</string>
    <string name="preference_show_face_detection_summary">Whether to show an on-screen icon for enabling or disabling face detection</string>
    <string name="preference_show_auto_level">Show auto-level icon</string>
    <string name="preference_show_auto_level_summary">Whether to show an on-screen icon for enabling or disabling auto-level. When auto-level is enabled, photos will be rotated so they are automatically level with the horizon.</string>
    <string name="preference_show_stamp">Show stamp photo icon</string>
    <string name="preference_show_stamp_summary">Whether to show an on-screen icon for enabling or disabling photo stamp</string>
    <string name="preference_show_textstamp">Show custom text stamp photo icon</string>
    <string name="preference_show_textstamp_summary">Whether to show an on-screen icon for specifying custom text to be stamped onto the photo</string>
    <string name="preference_show_white_balance_lock">Show auto white balance lock icon</string>
    <string name="preference_show_white_balance_lock_summary">Whether to show an on-screen icon for locking or unlocking auto white balance</string>
    <string name="preference_show_exposure_lock">Show auto exposure lock icon</string>
    <string name="preference_show_exposure_lock_summary">Whether to show an on-screen icon for locking or unlocking exposure</string>
    <string name="preference_enable_remote">Enable Bluetooth LE remote control</string>
    <string name="preference_enable_remote_summary">Enable Bluetooth LE (BLE) remote control devices</string>
    <string name="preference_remote_type">Remote device type</string>
    <string name="preference_remote_disconnect_screen_dim">Dim screen if remote disconnects</string>
    <string name="preference_remote_disconnect_screen_dim_summary">Hint: set default brightness to minimum level before starting Open Camera.</string>
    <string name="preference_water_type">Use Saltwater for depth calculations</string>
    <string name="preference_water_type_summary">For underwater housings, improves accuracy if correct water type is selected.</string>
    <string name="preference_show_store_location">Show store location data icon</string>
    <string name="preference_show_store_location_summary">Whether to show an on-screen icon for enabling or disabling location data (geotagging)</string>
    <string name="preference_show_cycle_flash">Show flash icon</string>
    <string name="preference_show_cycle_flash_summary">Whether to show an on-screen icon for cycling through the flash options, instead of displaying flash options on the popup menu. Note that torch is not available if using this icon.</string>
    <string name="preference_show_cycle_raw">Show RAW icon</string>
    <string name="preference_show_cycle_raw_summary">Whether to show an on-screen icon for cycling through the RAW modes</string>
    <string name="preference_select_remote">Select remote device</string>
    <string name="preference_multi_cam_button">Multiple cameras icon</string>
    <string name="preference_multi_cam_button_summary">If enabled, use separate buttons to switch between front/back cameras, and to switch between multiple front/back facing cameras. If disabled, the Switch Camera icon will cycle through all cameras.</string>
    <string name="preference_comment_ypr">Store yaw, pitch and roll</string>
    <string name="preference_comment_ypr_summary">Store the yaw, pitch and roll of the device in the photo\'s Exif user comment, for non-RAW (JPEG/etc) images only</string>
    <string name="preference_show_focus_peaking">Show focus peaking icon</string>
    <string name="preference_show_focus_peaking_summary">Whether to show an on-screen icon for enabling or disabling focus peaking. When focus peaking is enabled, highlights will be shown on in-focus edges (contours). See Settings/Camera preview/"Focus peaking".</string>
    <string name="preference_show_cycle_lock_orientation">Show lock orientation icon</string>
    <string name="preference_show_cycle_lock_orientation_summary">Whether to show an on-screen icon for cycling through locking the photo/video orientation to portrait or landscape.</string>
    <string name="preference_show_preview_shots">Show preview shots icon</string>
    <string name="preference_show_preview_shots_summary">Whether to show an on-screen icon for enabling or disabling preview shots</string>
    <string name="preference_remote_video_mode">Remote control action during video recording</string>
    <string name="preference_licence_open_camera" translatable="false">Open Camera</string>
    <string name="preference_licence_open_camera_text" translatable="false">Open Camera is © 2013–2026 Mark Harman, released under the GPL v3 or later. Tap here for full licence text and terms of service.</string>
    <string name="preference_licence_androidx" translatable="false">AndroidX libraries</string>
    <string name="preference_licence_androidx_text" translatable="false">Open Camera uses the AndroidX/Jetpack libraries
        under the Apache license version 2.0. Tap here for full licence text.</string>
    <string name="preference_licence_google_icons" translatable="false">Google\'s Material Design icons</string>
    <string name="preference_licence_google_icons_text" translatable="false">Open Camera uses icons from Google\'s Material Design icons
        (https://developer.android.com/design/downloads/index.html ,
        https://design.google.com/icons/ ,
        https://github.com/google/material-design-icons/ ,
        https://google.github.io/material-design-icons/ ,
        https://fonts.google.com/icons)
        under the Apache license version 2.0. Some icons include modifications. Tap here for full licence text.</string>
    <string name="preference_licence_online" translatable="false">Online licences</string>
    <string name="preference_licence_online_text" translatable="false">Please tap here for full online licensing information (opens in your browser).</string>
</resources>