<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_root">

    <CheckBoxPreference
        android:key="preference_location"
        android:title="@string/preference_location"
        android:summary="@string/preference_location_summary"
        android:icon="@drawable/ic_gps_fixed_white_48dp"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_gps_direction"
        android:title="@string/preference_gps_direction"
        android:summary="@string/preference_gps_direction_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_comment_ypr"
        android:title="@string/preference_comment_ypr"
        android:summary="@string/preference_comment_ypr_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_require_location"
        android:title="@string/preference_require_location"
        android:summary="@string/preference_require_location_summary"
        android:defaultValue="false"
        android:dependency="preference_location"
        />

</PreferenceScreen>
