<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_root">

    <Preference
        android:key="preference_save_settings"
        android:title="@string/preference_save_settings"
        android:summary="@string/preference_save_settings_summary"
        android:icon="@drawable/ic_save_white_48dp"
        />

    <Preference
        android:key="preference_restore_settings"
        android:title="@string/preference_restore_settings"
        android:summary="@string/preference_restore_settings_summary"
        android:icon="@drawable/baseline_folder_open_white_48"
        />

    <Preference
        android:key="preference_reset"
        android:title="@string/preference_reset"
        android:summary="@string/preference_reset_summary"
        android:icon="@drawable/ic_power_settings_new_white_48dp"
        />

</PreferenceScreen>
