<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_root">

    <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
    <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
    <ListPreference
        android:key="preference_antibanding"
        android:title="@string/preference_antibanding"
        android:summary="@string/preference_antibanding_summary"
        />

    <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
    <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
    <ListPreference
        android:key="preference_edge_mode"
        android:title="@string/preference_edge_mode"
        android:summary="@string/preference_edge_mode_summary"
        />

    <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
    <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
    <ListPreference
        android:key="preference_noise_reduction_mode"
        android:title="@string/preference_noise_reduction_mode"
        android:summary="@string/preference_noise_reduction_mode_summary"
        />

</PreferenceScreen>
